--- a/test/fixtures/blogs.yml
+++ b/test/fixtures/blogs.yml
@@ -1,9 +1,3 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  title: MyString
-  content: MyText
-
-two:
-  title: MyString
-  content: MyText
+blog_1:
+  title: My first blog
