--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
         run: bin/rails assets:precompile
 
       - name: Run tests
-        run: bundle exec test
+        run: bundle exec rails test:all
